# playlist_to_cd

./: .cursorignore  .env.example  .gitignore  ARCHITECTURE.md  CURRENT_STATE.md  README.md  main.py  main_original.py  pyproject.toml  requirements.txt
.cursor/plans/: documentation_checkpoint_files_af1a57a3.plan.md
.cursor/rules/: git_workflow.mdc  plan_mode_safety.mdc  project_workflow.mdc  refactor_safety.mdc  testing_workflow.mdc
core/: artists.py  constants.py  ffmpeg_utils.py  naming.py  query.py
modes/: audio_cd.py  mp3_cd.py
packaging/: .gitignore  build_macos.sh  launcher.py  playlist_to_cd.spec
sources/: csv_source.py  spotify_source.py
tests/: conftest.py  test_artists.py  test_ffmpeg_utils_unit.py  test_gui_smoke.py  test_main.py  test_naming.py  test_query.py
tests/manual/input_csv/: dummy_small.csv
tests/modes/: test_audio_cd.py  test_mp3_cd.py
tests/sources/: test_csv_source.py  test_source_contract.py  test_spotify_source.py
