[project]
name = "playlist_to_cd"
version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".pytest_cache", "manual", "runs"]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
